# apl

./: .gitignore  Cargo.toml  LICENSE  README.md  apl.key  build.rs  index  index.msgpack  install.sh  reproduce_ui.rs  sample.txt  verify_index.rs
.githooks/: pre-push
.github/workflows/: ci.yml  coverage.yml  package-discovery.yml  publish-index.yml  publish.yml  release-binary.yml  release.yml  update-index.yml  update-packages.yml  update-ports.yml
crates/apl/: Cargo.toml  README.md
crates/apl-builder/: Cargo.toml
crates/apl-builder/src/: main.rs
crates/apl-cli/: Cargo.toml  README.md  build.rs
crates/apl-cli/src/: lib.rs  main.rs
crates/apl-cli/src/cmd/: clean.rs  completions.rs  hash.rs  history.rs  info.rs  install.rs  list.rs  package.rs  remove.rs  rollback.rs  run.rs  search.rs  self_update.rs  shell.rs  status.rs  update.rs  upgrade.rs  use.rs
crates/apl-cli/src/ops/: context.rs  error.rs  flow.rs  install.rs  mod.rs  remove.rs  resolve.rs  switch.rs
crates/apl-cli/src/store/: actor.rs  db.rs
crates/apl-cli/src/types/: mod.rs
crates/apl-cli/src/ui/: actor.rs  buffer.rs  engine.rs  list.rs  mod.rs  output.rs  progress.rs  reporter.rs  table.rs  theme.rs
crates/apl-core/: Cargo.toml
crates/apl-core/src/: builder.rs  lib.rs  main.rs  manifest.rs  package.rs  paths.rs  pubgrub_adapter.rs  relinker.rs  repo.rs  reporter.rs  resolver.rs  strategies.rs  sysroot.rs  types.rs
crates/apl-core/src/indexer/: discovery.rs  hashing.rs  mod.rs  walk.rs
crates/apl-core/src/indexer/forges/: mod.rs  ports.rs  traits.rs
crates/apl-core/src/indexer/forges/github/: graphql.rs  mod.rs
crates/apl-core/src/indexer/import/: homebrew.rs  mod.rs
crates/apl-core/src/io/: artifacts.rs  chunked.rs  dmg.rs  download.rs  extract.rs  mod.rs
crates/apl-indexer/: Cargo.toml
crates/apl-pkg/: Cargo.toml
crates/apl-pkg/src/: main.rs
crates/apl-ports/: Cargo.toml
crates/apl-ports/src/: lib.rs  main.rs  strategies.rs
crates/apl-schema/: Cargo.toml
crates/apl-schema/examples/: inspect.rs
crates/apl-schema/src/: arch.rs  asset_pattern.rs  hash.rs  index.rs  lib.rs  merkle.rs  types.rs  version.rs
crates/apl-types/: Cargo.toml
docs/: actor_model.md  architectural_review.md  architecture.md  contributing.md  coverage_guide.md  critiques_and_improvements.md  ecosystem.md  getting-started.md  maintainer_guide.md  package-format.md  pipeline_architecture.md  refactoring_session_summary.md  registry_architecture.md  system_architecture.md  user-guide.md
docs/examples/: ruby_pointer.toml
formulas/: bat.toml  bottom.toml  delta.toml  dl.toml  fastfetch.toml  fd.toml  fzf.toml  ghostty.toml  hyperfine.toml  jq.toml  lazygit.toml  neovim.toml  ripgrep.toml  starship.toml  testbump.toml  testdep.toml  vlc.toml  zoxide.toml
infrastructure/: worker.js
registry/ag/: age.toml
registry/ai/: air.toml
registry/al/: alacritty.toml
registry/am/: amber.toml
registry/ap/: apl.toml
registry/ar/: argocd.toml
registry/as/: asdf.toml
registry/at/: atuin.toml
registry/ba/: bandwhich.toml  bat.toml
registry/bi/: biome.toml
registry/bo/: bottom.toml
registry/br/: brew.toml  broot.toml
registry/bt/: btm.toml  btop.toml
registry/bu/: bun.toml
registry/bw/: bw.toml
registry/ca/: caddy.toml
registry/ch/: charm.toml  choose.toml
registry/cl/: cloudflared.toml
registry/cm/: cmake.toml
registry/co/: colima.toml  cosign.toml
registry/cr/: crane.toml
registry/cs/: csvlens.toml
registry/cu/: curlie.toml
registry/da/: dasel.toml
registry/db/: dbmate.toml
registry/de/: delta.toml  deno.toml
registry/di/: difft.toml  diskus.toml  dive.toml
registry/dp/: dprint.toml
registry/du/: dua.toml  duf.toml  dust.toml
registry/et/: etcd.toml
registry/ex/: exa.toml
registry/ez/: eza.toml
registry/fa/: fastfetch.toml
registry/fd/: fd.toml
registry/fi/: fish.toml
registry/fl/: flyctl.toml
registry/fx/: fx.toml
registry/fz/: fzf.toml
registry/gd/: gdu.toml
registry/gh/: gh.toml
registry/gi/: git-lfs.toml  git-town.toml  github-cli.toml  gitleaks.toml  gitui.toml
registry/gl/: glab.toml  gleam.toml  glow.toml
registry/go/: golangci-lint.toml  goreleaser.toml
registry/gp/: gping.toml
registry/gr/: grex.toml  gron.toml
registry/ha/: hadolint.toml
registry/he/: helix.toml  helm.toml  hexyl.toml
registry/hu/: hugo.toml
registry/hx/: hx.toml
registry/hy/: hyperfine.toml
registry/in/: infisical.toml
registry/jl/: jless.toml
registry/jq/: jq.toml
registry/ju/: just.toml
registry/k9/: k9s.toml
registry/ki/: kitty.toml
registry/la/: lazydocker.toml  lazygit.toml  lazysql.toml
registry/lf/: lf.toml
registry/li/: libyaml.toml  lima.toml
registry/lo/: logseq.toml
registry/ls/: lsd.toml
registry/lu/: lua.toml
registry/ma/: marp.toml
registry/mi/: micro.toml  migrate.toml  miller.toml  minisign.toml
registry/mo/: mods.toml
registry/mp/: mpv.toml
registry/ne/: neovim.toml
registry/ni/: ninja.toml
registry/nn/: nnn.toml
registry/nu/: nushell.toml
registry/nv/: nvim.toml
registry/on/: onefetch.toml
registry/op/: opa.toml  openssl.toml  opentofu.toml
registry/os/: osv-scanner.toml
registry/ou/: ouch.toml
registry/ox/: oxlint.toml
registry/pa/: pastel.toml
registry/pn/: pnpm.toml
registry/po/: podman.toml
registry/pr/: procs.toml
registry/pu/: pueue.toml  pulumi.toml
registry/qs/: qsv.toml
registry/ra/: railway.toml
registry/rc/: rclone.toml
registry/re/: readline.toml
registry/rg/: rg.toml
registry/ri/: ripgrep.toml
registry/ru/: ruby.toml
registry/sa/: sad.toml
registry/sc/: scc.toml  sccache.toml
registry/sd/: sd.toml
registry/sh/: shuttle.toml
registry/sk/: skaffold.toml
registry/sl/: slides.toml  slsa-verifier.toml
registry/so/: soft-serve.toml  sops.toml
scripts/: audit_architectures.sh  audit_checksums.sh  audit_packages.sh  benchmark.sh  complete_checksum_discovery.sh  discover_checksums.sh  gh_checksum_discovery.sh  identify_missing_popular.py  simulate_ci.sh
src/: lib.rs  main.rs
src/cas/: mod.rs
tests/: integration_tests.rs
(+148 files in other folders)
