[package]
name = "apl"
version = "0.2.0"
edition = "2024"
description = "apl - A Package Layer for macOS"
license = "MIT"
repository = "https://github.com/jpmacdonald/apl"

[dependencies]
# Hashing
blake3 = "1.5"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
postcard = { version = "1", features = ["alloc"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.28", features = ["stream", "rustls-tls"] }
crossterm = "0.29.0"
futures = "0.3.31"
async-compression = { version = "0.4.36", features = ["zstd", "gzip", "tokio"] }
tempfile = "3.24.0"
tar = "0.4.44"
flate2 = "1.1.5"
zstd = "0.13.3"
clap_complete = "4.5.62"
chrono = "0.4"
zip = "2"
console = "0.16.2"
bytes = "1.11.0"
walkdir = "2.5.0"
memmap2 = "0.9.9"
tokio-util = { version = "0.7.17", features = ["io"] }
tokio-tar = "0.3.1"
tokio-stream = "0.1.17"
libc = "0.2.178"
num_cpus = "1.17.0"
fs_extra = "1.3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24.0"
