[workspace]
members = [
    "crates/apl-core",
    "crates/apl-cli",
    "crates/apl-pkg",
    "crates/apl-schema",
    "crates/apl-builder",
]
resolver = "2"

# ============================================================================
# WORKSPACE DEPENDENCIES
# All crates share these version-locked dependencies
# ============================================================================

[workspace.dependencies]
# Internal crates
apl-schema = { path = "crates/apl-schema" }
apl-core = { path = "crates/apl-core" }
apl-cli = { path = "crates/apl-cli" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tokio-tar = "0.3"
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
postcard = { version = "1", features = ["alloc"] }

# Compression / Archives
zstd = "0.13"
async-compression = { version = "0.4", features = ["zstd", "gzip", "tokio"] }
tar = "0.4"
zip = "2"
flate2 = "1.1"

# Crypto / Hashing
sha2 = "0.10"
blake3 = { version = "1", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.2"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
crossterm = "0.29"
comfy-table = "7.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System utilities
dirs = "5"
walkdir = "2.5"
fs_extra = "1.3"
which = "6.0"
libc = "0.2"
num_cpus = "1.17"
wait-timeout = "0.2"
tempfile = "3.24"
memmap2 = "0.9"

# Versioning / Resolution
semver = { version = "1", features = ["serde"] }
pubgrub = "0.2"
chrono = "0.4"
regex = "1"
glob = "0.3"

# Misc
bytes = "1.11"
rand = { version = "0.9", features = ["std"] }
fuzzy-matcher = "0.3"
fastcdc = "3"

# AWS (optional)
aws-sdk-s3 = "1.119"
aws-config = "1.8"
opendal = { version = "0.45", features = ["services-s3"] }

# Database (apl-cli only)
rusqlite = { version = "0.32", features = ["bundled"] }

# Testing
mockito = "1"

# ============================================================================
# LINTS
# Shared across all workspace members via `[lints] workspace = true`
# ============================================================================

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Correctness and safety
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Style and clarity -- deny to enforce idiomatic Rust
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Pedantic lints we allow (genuinely too noisy or false-positive-prone)
module_name_repetitions = "allow"  # artifact::ArtifactStore, etc. -- pervasive and harmless
must_use_candidate = "allow"       # would require #[must_use] on hundreds of fns
return_self_not_must_use = "allow" # related to must_use_candidate
similar_names = "allow"            # flags legitimate pairs like is_zip/is_gzip
too_many_lines = "allow"           # some functions are naturally long (e.g. build())
cast_possible_truncation = "allow" # systems code, manually verified
cast_sign_loss = "allow"           # systems code, manually verified
cast_precision_loss = "allow"      # systems code, manually verified
cast_possible_wrap = "allow"       # systems code, manually verified
struct_excessive_bools = "allow"   # architectural, not a real issue

# ============================================================================
# PROFILES
# ============================================================================

[profile.release]
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[profile.coverage]
inherits = "dev"
opt-level = 0
incremental = false
