[package]
name = "apl-core"
version = "0.1.0"
edition = "2024"
description = "Core library for APL - shared indexer, resolver, and IO logic"


[dependencies]
apl-schema = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true, optional = true }
toml_edit = { workspace = true }

# Network
reqwest = { workspace = true, optional = true }

# Compression / Archive
async-compression = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
tokio-tar = { workspace = true }
tokio-util = { workspace = true }

# System
walkdir = { workspace = true }
fs_extra = { workspace = true }
which = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
wait-timeout = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }

# Crypto
sha2 = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
fastcdc = { workspace = true }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
regex = { workspace = true }
pubgrub = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }

# AWS / Upload (Feature Gated)
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

# Builder Tool Deps
opendal = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }

[features]
default = ["parsing", "network"]
parsing = ["dep:toml"]
network = ["dep:reqwest"]
upload = ["dep:aws-sdk-s3", "dep:aws-config"]

[dev-dependencies]
mockito = { workspace = true }
