[package]
name = "apl-ports"
version = "0.1.0"
edition = "2021"

[dependencies]
apl-types = { path = "../apl-types" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
opendal = { version = "0.50", features = ["services-s3"] }
async-trait = "0.1"
glob = "0.3"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
regex = "1"
sha2 = "0.10"
hex = "0.4"
