[package]
name = "apl-schema"
version = "0.1.0"
edition = "2024"
description = "Shared types and wire format for APL"
license = "MIT"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
semver = { workspace = true }
postcard = { workspace = true }
zstd = { workspace = true }
memmap2 = { workspace = true }
fuzzy-matcher = { workspace = true }
anyhow = { workspace = true }

# Re-exported types functionality
blake3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
